data preprocessing script for training targets generation; added logging

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,9 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# model training artifacts and data
+model_training/musicnn-training/data/
+output/
+
+debug*
