added sample_id, audios_v1.zip generation; modified script for preparing targets; added inference code

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Custom
 backlog/
 audio*/
+*.zip
 metadata/
 _*.ipynb
 
@@ -185,4 +186,5 @@ cython_debug/
 model_training/musicnn-training/data/
 output/
 
+# debugging files
 debug*
