--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ librosa==0.7.0
 llvmlite==0.29.0
 Markdown==3.1.1
 numba==0.45.1
-numpy==1.16.4 #1.21.6
+numpy==1.16.4
 pescador==2.0.2
 protobuf==3.9.0
 pycparser==2.19
